--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -13,216 +13,204 @@
         android:background="@drawable/baseline_arrow_back_24"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_12sdp"
+        android:id="@+id/registration_back_btn"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_3sdp"
         />
 
- <RelativeLayout
-     android:layout_width="match_parent"
-     android:layout_height="@dimen/_530sdp"
-     android:layout_alignParentBottom="true"
-     android:background="@drawable/custom_shape_registrationform"
-     >
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="REGISTRATION FORM"
-         android:textColor="@color/black"
-         android:textSize="@dimen/_24sdp"
-         android:fontFamily="@font/coda"
-         android:layout_marginTop="@dimen/_27sdp"
-         android:layout_centerHorizontal="true"
-         android:id="@+id/Registration_form_text"
-         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/_165sdp"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/custom_shape_registrationform">
 
-     <EditText
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@drawable/custom_edit_text"
-         android:id="@+id/edittext_full_name"
-         android:layout_below="@+id/Registration_form_text"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:hint="Full Name"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         android:paddingStart="@dimen/_15sdp"
-         android:singleLine="true"
-         />
+        <TextView
+            android:id="@+id/Registration_form_text"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/coda"
+            android:text="REGISTRATION FORM"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp"/>
 
-     <EditText
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@drawable/custom_edit_text"
-         android:id="@+id/edittext_phone_number"
-         android:layout_below="@+id/edittext_full_name"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:hint="Phone Number"
-         android:inputType="number"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         android:paddingStart="@dimen/_14sdp"
-         android:singleLine="true"
-         />
+        <EditText
+            android:id="@+id/edittext_full_name"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/Registration_form_text"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:hint="Full Name"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp" />
 
-     <EditText
-         android:layout_width="match_parent"
-         android:layout_height="44dp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@drawable/custom_edit_text"
-         android:id="@+id/edittext_email_address"
-         android:layout_below="@+id/edittext_phone_number"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:hint="Email Address"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         android:paddingStart="@dimen/_14sdp"
-         android:singleLine="true"
-         />
+        <EditText
+            android:id="@+id/edittext_phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/edittext_full_name"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:hint="Phone Number"
+            android:inputType="number"
+            android:paddingStart="@dimen/_14sdp"
+            android:singleLine="true"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp" />
 
-     <EditText
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@drawable/custom_edit_text"
-         android:id="@+id/edittext_pass_word"
-         android:layout_below="@+id/edittext_email_address"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:hint="Password"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         android:paddingStart="@dimen/_15sdp"
-         android:singleLine="true"
-         />
+        <EditText
+            android:id="@+id/edittext_email_address"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/edittext_phone_number"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:hint="Email Address"
+            android:paddingStart="@dimen/_14sdp"
+            android:singleLine="true"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp" />
+
+        <EditText
+            android:id="@+id/edittext_pass_word"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/edittext_email_address"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:hint="Password"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp" />
 
 
-     <com.skydoves.powerspinner.PowerSpinnerView
-         android:layout_width="@dimen/_139sdp"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_below="@+id/edittext_pass_word"
-         android:id="@+id/State_DropDown"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:layout_marginEnd="@dimen/_191sdp"
-         android:background="@color/white"
-         android:hint="State"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         app:spinner_item_height="@dimen/_46sdp"
-         android:paddingStart="@dimen/_15sdp"
-         android:gravity="center_vertical"
-         app:spinner_item_array="@array/dropdown_State"
-         app:spinner_arrow_show="true"
-         app:spinner_popup_max_height="120dp"
-         app:spinner_divider_color="@color/black"
-         app:spinner_arrow_tint="@color/black"
-         />
+        <com.skydoves.powerspinner.PowerSpinnerView
+            android:id="@+id/State_DropDown"
+            android:layout_width="@dimen/_139sdp"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/edittext_pass_word"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_toStartOf="@+id/District_DropDown"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:hint="State"
+            android:paddingStart="@dimen/_15sdp"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/black"
+            app:spinner_divider_color="@color/black"
+            app:spinner_item_array="@array/dropdown_State"
+            app:spinner_item_height="@dimen/_46sdp"
+            app:spinner_popup_max_height="120dp" />
 
-     <com.skydoves.powerspinner.PowerSpinnerView
-         android:layout_width="@dimen/_139sdp"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_below="@+id/edittext_pass_word"
-         android:id="@+id/District_DropDown"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:layout_alignParentEnd="true"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@color/white"
-         android:hint="State"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         app:spinner_item_height="@dimen/_46sdp"
-         android:paddingStart="@dimen/_15sdp"
-         android:gravity="center_vertical"
-         app:spinner_item_array="@array/dropdown_District"
-         app:spinner_arrow_show="true"
-         app:spinner_popup_max_height="@dimen/_120sdp"
-         app:spinner_divider_color="@color/black"
-         app:spinner_arrow_tint="@color/black"
-         />
+        <com.skydoves.powerspinner.PowerSpinnerView
+            android:id="@+id/District_DropDown"
+            android:layout_width="@dimen/_131sdp"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/edittext_pass_word"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:hint="District"
+            android:paddingStart="@dimen/_15sdp"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/black"
+            app:spinner_divider_color="@color/black"
+            app:spinner_item_array="@array/dropdown_District"
+            app:spinner_item_height="@dimen/_46sdp"
+            app:spinner_popup_max_height="@dimen/_120sdp" />
 
-     <EditText
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/_43sdp"
-         android:background="@drawable/custom_edit_text"
-         android:layout_below="@id/State_DropDown"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:hint="City"
-         android:paddingStart="@dimen/_15sdp"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:id="@+id/Edittext_City"
-         android:singleLine="true"
-         />
+        <EditText
+            android:id="@+id/Edittext_City"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@id/State_DropDown"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:hint="City"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000" />
 
-     <com.skydoves.powerspinner.PowerSpinnerView
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/_44sdp"
-         android:layout_below="@+id/Edittext_City"
-         android:id="@+id/Type_DropDown"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:layout_marginStart="@dimen/_26sdp"
-         android:layout_marginEnd="@dimen/_26sdp"
-         android:background="@color/white"
-         android:hint="Type"
-         android:textColorHint="#61000000"
-         android:textColor="#61000000"
-         android:textSize="@dimen/_14sdp"
-         app:spinner_item_height="46dp"
-         android:paddingStart="@dimen/_15sdp"
-         android:gravity="center_vertical"
-         app:spinner_item_array="@array/Type"
-         app:spinner_arrow_show="true"
-         app:spinner_popup_max_height="@dimen/_120sdp"
-         app:spinner_divider_color="@color/black"
-         app:spinner_arrow_tint="@color/black"
-         />
+        <com.skydoves.powerspinner.PowerSpinnerView
+            android:id="@+id/Type_DropDown"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/Edittext_City"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:hint="Type"
+            android:paddingStart="@dimen/_15sdp"
+            android:textColor="#61000000"
+            android:textColorHint="#61000000"
+            android:textSize="@dimen/_14sdp"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/black"
+            app:spinner_divider_color="@color/black"
+            app:spinner_item_array="@array/Type"
+            app:spinner_item_height="46dp"
+            app:spinner_popup_max_height="@dimen/_120sdp" />
 
-     <CheckBox
-         android:layout_width="wrap_content"
-         android:layout_height="@dimen/_40sdp"
-         android:layout_below="@id/Type_DropDown"
-         android:text="I accpet Terms and Condition..!"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="@dimen/_14sdp"
-         android:textColor="@color/white"
-         android:id="@+id/checkbox"
-         />
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_below="@id/Type_DropDown"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="I accpet Terms and Condition..!"
+            android:textColor="@color/white" />
 
-     <androidx.appcompat.widget.AppCompatButton
-         android:layout_width="@dimen/_203sdp"
-         android:layout_height="@dimen/_40sdp"
-         android:background="@drawable/custom_shape_btn"
-         android:layout_below="@+id/checkbox"
-         android:layout_centerHorizontal="true"
-         android:text="Send OTP"
-         android:textColor="@color/black"
-         android:id="@+id/send_OTP_btn"
-         android:fontFamily="@font/ibarra_real_nova"
-         android:textAllCaps="false"
-         android:textSize="20dp"
-         />
-     
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/send_OTP_btn"
+            android:layout_width="@dimen/_203sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_below="@+id/checkbox"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/custom_shape_btn"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:text="Send OTP"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="20dp"/>
 
 
-
-
-
- </RelativeLayout>
-
-
+    </RelativeLayout>
 
 
 </RelativeLayout>
