--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/foget_password_email"
-        android:visibility="gone"
+        android:visibility="visible"
         >
         
         <ImageView
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/FORGET_PASSWORD_SELECTION"
-        android:visibility="visible"
+        android:visibility="gone"
         >
 
         <TextView
@@ -122,7 +122,7 @@
             android:id="@+id/Select_which_contact_detail_should_we"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select which contact detail should we/n use to reset your password? "
+            android:text="Select which contact detail should we\n use to reset your password? "
             android:textAlignment="center"
             android:textColor="#80000000"
             android:textSize="@dimen/_20sdp"
@@ -244,9 +244,5 @@
 
 
     </RelativeLayout>
-
-
-
-
 
 </RelativeLayout>
