--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -31,7 +31,7 @@
             android:src="@drawable/froget_password_icon"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/_159sdp"
+            android:layout_marginTop="@dimen/_80sdp"
             android:layout_marginStart="@dimen/_200sdp"
             android:layout_marginEnd="@dimen/_145sdp"
             android:id="@+id/image_view_forgeticon"
@@ -47,7 +47,7 @@
             android:textSize="@dimen/_30sdp"
             android:fontFamily="@font/coda"
             android:layout_below="@id/image_view_forgeticon"
-            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:layout_centerHorizontal="true"
             />
 
@@ -58,7 +58,7 @@
             android:text="Provide your account’s email for which\n you want to reset your password! "
             android:textAlignment="center"
             android:textColor="#80000000"
-            android:textSize="@dimen/_20sdp"
+            android:textSize="@dimen/_18sdp"
             android:fontFamily="@font/ibarra_real_nova"
             android:layout_below="@id/FORGET_PASSWORD_TEXT"
             android:layout_centerHorizontal="true"
@@ -66,7 +66,7 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_26sdp"
             android:layout_marginEnd="@dimen/_26sdp"
             android:background="@drawable/custom_edit_text"
@@ -94,6 +94,7 @@
             android:fontFamily="@font/ibarra_real_nova"
             android:textSize="@dimen/_20sdp"
             android:background="@drawable/custom_shape_btn"
+            android:layout_marginBottom="@dimen/_15sdp"
             />
 
     </RelativeLayout>
@@ -102,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/FORGET_PASSWORD_SELECTION"
-        android:visibility="visible"
+        android:visibility="gone"
         >
 
         <TextView
