--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -126,7 +126,7 @@
             android:text="Select which contact detail should we\n use to reset your password? "
             android:textAlignment="textStart"
             android:textColor="#80000000"
-            android:textSize="@dimen/_20sdp"
+            android:textSize="@dimen/_18sdp"
             android:fontFamily="@font/ibarra_real_nova"
             android:layout_below="@id/MAKE_SELECTION_TEXT"
             android:layout_centerHorizontal="true"
@@ -243,6 +243,111 @@
 
         </RelativeLayout>
 
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newcredenital_password_email"
+        android:visibility="visible"
+        >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/froget_password_icon"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_110sdp"
+            android:layout_marginStart="@dimen/_200sdp"
+            android:layout_marginEnd="@dimen/_145sdp"
+            android:id="@+id/image_view_newcredenital"
+            />
+
+        <TextView
+            android:id="@+id/newcredenital_PASSWORD_TEXT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NEW\nCREDENTIALS"
+            android:textAlignment="center"
+            android:textColor="#00B5FF"
+            android:textSize="@dimen/_30sdp"
+            android:fontFamily="@font/coda"
+            android:layout_below="@id/image_view_newcredenital"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_centerHorizontal="true"
+            />
+
+        <TextView
+            android:id="@+id/your_identity_has_been_verified"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your identity has been verified!\n Set your new password "
+            android:textAlignment="center"
+            android:textColor="#80000000"
+            android:textSize="@dimen/_15sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:layout_below="@id/newcredenital_PASSWORD_TEXT"
+            android:layout_centerHorizontal="true"
+
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_44sdp"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:backgroundTint="#00AFEF"
+            android:id="@+id/edittext_new_password"
+            android:layout_below="@+id/your_identity_has_been_verified"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:hint="New Password "
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/_14sdp"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:drawablePadding="@dimen/_5sdp"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_44sdp"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_text"
+            android:backgroundTint="#00AFEF"
+            android:id="@+id/edittext_confirm_password"
+            android:layout_below="@+id/edittext_new_password"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:hint="Confirm Password "
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/_14sdp"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:drawablePadding="@dimen/_2sdp"
+            />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:id="@+id/btn_update_text"
+            android:layout_below="@id/edittext_confirm_password"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:text="UPDATE"
+            android:textAllCaps="false"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:textSize="@dimen/_20sdp"
+            android:background="@drawable/custom_shape_btn"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/_5sdp"
+            />
 
     </RelativeLayout>
 
