--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -323,6 +323,7 @@
             android:layout_below="@+id/edittext_new_password"
             android:layout_marginTop="@dimen/_15sdp"
             android:hint="Confirm Password "
+            android:inputType="textPassword"
             android:textColorHint="#ffffff"
             android:textColor="#ffffff"
             android:textSize="@dimen/_14sdp"
