--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RegistrationFrom"
+    tools:context=".ui.RegistrationForm"
     android:background="@drawable/registrationform_page_background">
 
     <androidx.appcompat.widget.AppCompatButton
