--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -21,8 +21,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/foget_password_email"
-        android:visibility="gone"
+        android:id="@+id/foget_password_email_RelativeLayout"
+        android:visibility="visible"
         >
         
         <ImageView
@@ -71,7 +71,7 @@
             android:layout_marginEnd="@dimen/_26sdp"
             android:background="@drawable/custom_edit_text"
             android:backgroundTint="#00AFEF"
-            android:id="@+id/edittext_fogetpassword_email_adrs"
+            android:id="@+id/edittext_forgetpassword_email_adrs"
             android:layout_below="@+id/Provide_your_accounts_email_for_which"
             android:layout_marginTop="@dimen/_38sdp"
             android:hint="Email Address "
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
             android:id="@+id/next_forget_password_btn"
-            android:layout_below="@id/edittext_fogetpassword_email_adrs"
+            android:layout_below="@id/edittext_forgetpassword_email_adrs"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginStart="@dimen/_26sdp"
             android:layout_marginEnd="@dimen/_26sdp"
@@ -102,8 +102,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/FORGET_PASSWORD_SELECTION"
-        android:visibility="visible"
+        android:id="@+id/MAKE_SELECTION_RelativeLayout"
+        android:visibility="gone"
         >
 
         <TextView
@@ -123,13 +123,12 @@
             android:id="@+id/Select_which_contact_detail_should_we"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select which contact detail should we\n use to reset your password? "
+            android:text="Select which contact detail should we\nuse to reset your password? "
             android:textAlignment="textStart"
             android:textColor="#80000000"
             android:textSize="@dimen/_18sdp"
             android:fontFamily="@font/ibarra_real_nova"
             android:layout_below="@id/MAKE_SELECTION_TEXT"
-            android:layout_centerHorizontal="true"
             />
 
         <RelativeLayout
@@ -247,9 +246,111 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/Forget_Password_OTP_RelativeLayout"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/txt_otp_verification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_140sdp"
+            android:fontFamily="@font/coda"
+            android:text="OTP VERIFICATION"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_30sdp" />
+
+
+        <TextView
+            android:id="@+id/txt_enter_otp_sent_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txt_otp_verification"
+            android:layout_centerHorizontal="true"
+            android:singleLine="true"
+            android:layout_marginTop="@dimen/_19sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:text="Enter the OTP Send To +919032757020"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15sdp" />
+
+        <com.goodiebag.pinview.Pinview
+            android:id="@+id/pinview_4_digits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:inputType="number"
+            android:layout_below="@+id/txt_enter_otp_sent_to"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_41sdp" />
+
+        <TextView
+            android:id="@+id/tv_resend_otp_timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pinview_4_digits"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:text="00:45"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_24sdp" />
+
+
+        <TextView
+            android:id="@+id/txt_dont_receive_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_resend_otp_timer"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Don't receive the code?"
+            android:textColor="@color/black"
+            android:layout_marginStart="@dimen/_89sdp"
+
+            android:textSize="@dimen/_10sdp" />
+
+        <TextView
+            android:id="@+id/txt_re_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_resend_otp_timer"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_toEndOf="@id/txt_dont_receive_code"
+            android:background="@color/white"
+            android:text=" Re-send"
+            android:textColor="@color/Primary"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold"
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_otp_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_re_send"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_31sdp"
+            android:background="@drawable/custom_shape_btn"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:text="Submit"
+            android:textAllCaps="false"
+            android:layout_marginStart="@dimen/_73sdp"
+            android:layout_marginEnd="@dimen/_73sdp"
+            android:textSize="@dimen/_20sdp"
+
+            />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/newcredenital_password_email"
+        android:id="@+id/new_credentials_password_email"
         android:visibility="gone"
         >
 
