--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -112,7 +112,7 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_toStartOf="@+id/District_DropDown"
             android:layout_marginEnd="@dimen/_8sdp"
-            android:background="@color/white"
+            android:background="#CAF1FF"
             android:gravity="center_vertical"
             android:hint="State"
             android:paddingStart="@dimen/_15sdp"
@@ -134,7 +134,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginEnd="@dimen/_26sdp"
-            android:background="@color/white"
+            android:background="#CAF1FF"
             android:gravity="center_vertical"
             android:hint="District"
             android:paddingStart="@dimen/_15sdp"
@@ -171,7 +171,7 @@
             android:layout_marginStart="@dimen/_26sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginEnd="@dimen/_26sdp"
-            android:background="@color/white"
+            android:background="#CAF1FF"
             android:gravity="center_vertical"
             android:hint="Type"
             android:paddingStart="@dimen/_15sdp"
